Table users {
  id bigint [pk]
  email varchar [unique]
  password_digest varchar
  nickname varchar
  guest_token varchar [unique]
  google_uid varchar [unique]
  created_at datetime
  updated_at datetime
}

Table sessions {
  id bigint [pk]
  user_id bigint [not null, ref: > users.id]
  created_at datetime
  updated_at datetime
}

Table diaries {
  id bigint [pk]
  user_id bigint [not null, ref: > users.id]
  body text
  created_at datetime
  updated_at datetime
}
